enterprise/operator/pkg/lb/testdata/lbfrontend_translation/10-healthcheck-http/input-lbbackend-1.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBBackendPool
metadata:
  namespace: default
  name: lb-1
spec:
  backends:
    - ip: 172.18.0.5
      port: 8080
    - ip: 172.18.0.6
      port: 8080
  healthCheck:
    intervalSeconds: 15
    timeoutSeconds: 2
    healthyThreshold: 2
    unhealthyThreshold: 2
    http:
      host: my-hostname
      path: /health-endpoint
